# rp2350-hid-bridge-cpp

./: .gitignore  CMakeLists.txt  README.md
examples/: basic.cpp  script_demo.cpp
include/: rp2350_hid_bridge.hpp
include/rp2350_hid_bridge/: keys.hpp  protocol.hpp  script.hpp  serial.hpp
tests/: test_protocol.cpp
